--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
+      data-rh="true"
+    />
+    <meta
+      name="google-site-verification"
+      content="3SORIDpqH9ehwX1Va4drJJAbbCvTmoH6lEEa2IZZhuQ"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
