--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,47 @@
       and meticulous deconstruction."
       data-rh="true"
     />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="keywords"
+      content="demolition services Dubai, site clearance, building demolition, Dubai demolition, expert dismantling, Dsdemo"
+    />
     <meta
       name="google-site-verification"
       content="3SORIDpqH9ehwX1Va4drJJAbbCvTmoH6lEEa2IZZhuQ"
     />
+
+    <!-- Open Graph Meta Tags -->
+    <meta
+      property="og:title"
+      content="Dsdemo | Expert Demolition & Site Clearance Services"
+    />
+    <meta
+      property="og:description"
+      content="We specialize in the expert dismantling, removal, and demolition of structures across Dubai with a focus on safety and efficiency."
+    />
+    <meta property="og:image" content="https://dsdemo.ae/newlogo.png" />
+    <meta property="og:url" content="https://dsdemo.ae" />
+    <meta property="og:type" content="website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/newlogo.png" />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Dsdemo",
+        "url": "https://dsdemo.ae",
+        "logo": "https://dsdemo.ae/newlogo.png",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+971 56 244 4476",
+          "contactType": "Customer Service",
+          "areaServed": "AE",
+          "availableLanguage": "English"
+        }
+      }
+    </script>
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
